css/result.css
#result-container {
  display: flex;
  gap: 3rem;
  margin-bottom: 2rem;
  text-align: center;
  border: 1px oklch(87.81% 0.16869 91.863 / 0.25) solid;
  padding: 3rem;
  border-radius: 5rem;
}

#result-container h1 {
  font-size: 2rem;
  color: oklch(87.9% 0.169 91.605);
}

.overview {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1;
  padding: 2rem;
}

.overview h1 {
  font-size: 2rem;
  margin-bottom: 1rem;
  color: oklch(87.9% 0.169 91.605);
}

.overview p {
  font-size: 1.5rem;
  color: oklch(55.3% 0.013 58.071);
  font-family: "Segoe UI", sans-serif;
  font-weight: 400;
  line-height: 35px;
}

.overview button {
  width: fit-content;
  margin-top: 2rem;
  padding: 1rem 2rem;
  font-size: 1rem;
  background-color: oklch(87.9% 0.169 91.605);
  color: #212121;
  border: none;
  border-radius: 1rem;
  cursor: pointer;
}

.stats {
  flex: 1;
  display: grid;
  gap: 4rem;
  justify-content: center;
  padding: 2rem;
  grid-template-columns: auto auto;
}

.stats div {
  width: 150px;
  text-align: start;
}

.stats div h2 {
  font-size: 3rem;
  margin-bottom: 0.5rem;
  color: oklch(87.9% 0.169 91.605);
  white-space: nowrap;
}

.stats div p {
  font-family: "Segoe UI", sans-serif;
  font-size: 1rem;
  white-space: nowrap;
  color: oklch(55.3% 0.013 58.071);
}

.result-menu-container {
  display: flex;
  justify-content: center;
  margin-top: 2rem;
}

.result-menu-container button {
  width: fit-content;
  padding: 1rem 2rem;
  font-size: 1rem;
  background-color: #212121;
  color: oklch(87.9% 0.169 91.605);
  border: none;
  border-radius: 1rem;
  cursor: pointer;
}

.result-header {
  display: flex;
  justify-content: center;
  width: 100%;
  text-align: center;
}

.result-header h1 {
  translate: 0% 50%;
  color: oklch(87.9% 0.169 91.605);
  font-weight: 700;
  width: fit-content;
  background-color: oklch(0.2478 0 0);
  border: 1px oklch(87.81% 0.16869 91.863 / 0.25) solid;
  font-size: 1.5rem;
  padding: 1.5rem 5rem;
}

